# agent-factory

./: config.yaml  pyproject.toml  yaml.py
agent_factory/: __init__.py
agent_factory/agents/: __init__.py  agent_generator.py  architect.py  chief_planner.py  decomposer_agent.py  director_agent.py  docs_agent.py  fixer.py  fsm_agent.py  implementer.py  integrator_scaffolder.py  integrator_update_agent.py  knowledge_curator.py  knowledge_harvester.py  module_release_agent.py  module_scaffolder.py  prd_agent.py  protocol_agent.py  qa_agent.py  release_agent.py  reviewer.py  scaffolder.py  scene_graph_agent.py  scope_guard.py  spec_agent.py  squad_agent.py  undo_agent.py
agent_factory/orchestrator/: __init__.py  changes.py  config.yaml  conflicts.py  dag.py  github_publisher.py  github_publisher_docker.py  graph_export.py  main.py  merge_lock.py  patching.py  planning.py  pool.py  pool_process.py  publisher.py  rebase.py  router.py  sandbox.py  spec_pipeline.py  state_store.py  task_graph.py  validators.py  (+1 more)
docs/: agent-factory-quickstart.md  agent-factory.md
orchestrator/: __init__.py  changes.py  conflicts.py  dag.py  github_publisher.py  github_publisher_docker.py  graph_export.py  main.py  merge_lock.py  patching.py  planning.py  pool.py  pool_process.py  publisher.py  rebase.py  sandbox.py  spec_pipeline.py  validators.py  worker.py
scripts/: build_runners.ps1
tests/: test_agent_generator.py  test_integrator_versioning.py  test_multirepo.py  test_orchestrator.py  test_planner.py  test_spec_pipeline.py  test_validators.py  test_vault.py  test_vault_cite.py
(+90 files in other folders)
