[project]
name = "agent-factory"
version = "0.1.0"
description = "Python-based orchestrator for multi-agent automated project delivery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "agent_factory",
]
norecursedirs = [
  "runs",
]

[tool.setuptools.packages.find]
include = ["agent_factory*", "orchestrator*"]
